# eodc-examples

./: .gitignore  README.md  base_packages.txt  documentation.md  environment.yml  pyproject.toml  requirements.txt  tutorial.ipynb
demos/: dask.ipynb  download_gfm_stac_assets.ipynb  python-csw.ipynb  python-stac.ipynb
demos/ASAR/: ASAR_data_access.ipynb  ENVISAT_OpenEO.ipynb
demos/GFM/: download_gfm_python.ipynb  download_gfm_stac_assets.ipynb  gfm_dask_objectstorage.ipynb  gfm_filter.ipynb  gfm_maximum_flood_extent_dask.ipynb  gfm_maximum_flood_extent_local.ipynb  gfm_maximum_flood_extent_simple_plot.ipynb  gfm_maximum_flood_extent_stac.ipynb  gfm_plot_flood_scene.ipynb  gfm_rfm_evaluation.ipynb  gfm_rfm_evaluation_glofas.ipynb
demos/S2/: indices.ipynb  utm-tiles.geojson
demos/S5P/: D2.2-3_Dask_Usage.ipynb  D2.2-4_GeoSphere_Scientific_Use_Cases.ipynb  example_notebook_geosphere.ipynb
demos/STAC/: egms_landslide_detection.ipynb  egms_rsme.ipynb  python-stac_Access-nDOM.ipynb  python-stac_AnalyzingMetadata.ipynb  python-stac_CLMS-VPP.ipynb  python-stac_ClimateDT_Austria.ipynb  python-stac_DataDiscovery.ipynb  python-stac_LoadCLMS.ipynb  python-stac_LoadClimateDT.ipynb  python-stac_LoadDataXarray.ipynb
demos/cloud4geo_webinar/: landing.ipynb  python-stac.ipynb
demos/drysat-workshop/: README.md  era5.ipynb  gfm.ipynb  pyproject.toml
demos/eo-mqs/: 1-EO-MQS_DataDiscovery.ipynb  2-Simple-Metadata-Analysis.ipynb  3-Load-STAC-Items-xarray.ipynb  useful-links.json
demos/eodc_webinar_1/: environment.yml  load-item.ipynb
demos/hera/: 1_intro.ipynb  2_using_containers.ipynb  3_passing_outputs.ipynb  4_storage_options_emptyDir.ipynb  5_storage_options_Artifacts.ipynb  (+6 more)
sample_data/: README.md  collection_customer_demo.json
templates/: README.md  collection_template.json  item_template.json
tutorials/: CLMS_zarr.ipynb  Ground_Motion_WFS.ipynb  INCA_access_data.ipynb  SPARTACUS_access_data.ipynb  Sentinel-2.ipynb  eodc_sdk_argo.ipynb  gfm-explorer.ipynb  read_yipeeo_data.ipynb  read_yipeeo_data_protected.ipynb  sen2like-ndvi.ipynb  sen2like.ipynb  utils.py  wetland-explorer.ipynb  wetsnow-explorer.ipynb
(+29 files in other folders)
