[tool.poetry]
name = "eodc-examples"
version = "0.1.0"
description = "EODC Examples to showcase the use of EODC services"
authors = ["Christoph Reimer <christoph.reimer@eodc.eu>"]
readme = "README.md"
packages = [{include = "eodc_examples"}]

[tool.poetry.dependencies]
python = "^3.11"
pystac-client = ">0.7.0"
odc-stac = "^0.3.6"
planetary-computer = "^1.0.0"
geopandas = "^0.14.0"
rich = {extras = ["jupyter"], version = "^13.5.3"}
rioxarray = "^0.15.0"
matplotlib = "^3.8.0"
stackstac = "^0.4.4"
contextily = "^1.3.0"
dask-gateway = "^2023.1.1"
zarr = "^2.16.1"
s3fs = "^2023.9.1"
pydantic = "1.10.12"
lz4 = "^4.3.2"
dask = "2023.8.0"
pyproj = "^3.6.0"
owslib = "^0.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
